--- a/_posts/2020-01-08-Summary-of-2019.markdown
+++ b/_posts/2020-01-08-Summary-of-2019.markdown
@@ -8,6 +8,7 @@ tag: [Diary]
 category: blog
 author: ykx
 description: A bad 2019. Hope 2020 would be better.
+star: star
 ---
 
 2019年是过的很糟的一年。这种从2018年底开始持续一年多的感觉，总结起来大概是麻木。对ddl麻木无限制拖延任何事情，对五感麻木任何事物过眼如烟过耳如风，对情绪麻木少有极度欢乐的时刻也不会有以前那种心口撕扯的痛。毕设那段时间的感觉是，想挣扎却毫无力气，明知道需要改变却做不知如何行动，慢慢溺死直到最后解脱。不知天亮天黑，不知饥饿困倦，不知事情轻重缓急，躺在床上慢慢耗尽剩下的日子。想想去年的自己还在起早贪黑准备竞赛准备申请，前年的自己还在享受着每一门课的学习努力get了很多新技能，就无法理解当下这种突然失去了生活热情的状态。
