--- a/_posts/2020-01-08-Summary-of-2019.markdown
+++ b/_posts/2020-01-08-Summary-of-2019.markdown
@@ -3,7 +3,7 @@ title: "Summary of 2019"
 layout: post
 date: 2020-01-01 16:00
 updated: 2020-01-22 02:00
-img: snoopy.jpg
+img: santa_monica.jpg
 headerImage: True
 tag: [Diary]
 category: blog
