--- a/_posts/2020-10-04-Diary.markdown
+++ b/_posts/2020-10-04-Diary.markdown
@@ -14,4 +14,18 @@ description: Ph.D. life in LA.
 
 最近越来越颓废了，糟糕的日子真的是没有底线的...每天醒来都很down，没有能分享的人，也不想四处传播不好的情绪...和自己内耗太消耗精力了，要花好多好多时间在无意义的事情上，让自己能短暂地快乐一下...完全失控的感觉，最可怕的是不相信能靠自己变好起来，已经让自己失望太多太多太多次了...
 
-###### 
+###### 10/17/2020 16:26
+
+同组的印度师兄家里的亲人连续出了状况，先是一位很亲的叔叔去世了，现在是母亲身体状况很差。COVID-19的影响一直持续着，相比之下国内的情况让人安心很多。看到“I feel very helpless”时感觉特别能够理解那种心情但又不足以体会到其中的重量，只能说我很幸运不需要去面对同样的问题。
+
+###### 10/19/2020 14:00
+
+刚刚印度师兄打电话过来说"My mother is no more"...除了说"Sorry for hearing that. Take care of yourself"完全不知道该如何安慰...感觉很震惊，生活真的很残酷...
+
+忽然联想到我爸爸在高中的年纪经历了爷爷的去世，虽然平时总是和爸爸拌嘴，但自己真的很幸运能有如此爱我的父母一直陪伴着我。
+
+##### 10/21/2020 20:52
+
+收到邮件说第一个学期的一门P/NP课程还是incomplete的状态，要尽快解决。当时要求rotation和三个教授谈话写报告，自己只完成一个就再也没当回事。有很长时间处在这种即便该做的事情没有完成也不是很上心的状态，感觉事不关己，咋样都可以...听起来就很欠打，完全无药可救...估计旁观的话会觉得这个人为什么会有这么多奇葩的行为，脑子是不是有问题...
+
+看到邮件的第一反应是，要是被劝退了岂不是就可以回国了，反而有一种松了一口气的感觉...就像是觉得未来肯定会有更多的折磨，现在就结束反而很释然...这么看自己肯定是坏掉了...
