--- a/_posts/2020-10-04-Diary.markdown
+++ b/_posts/2020-10-04-Diary.markdown
@@ -24,8 +24,12 @@ description: Ph.D. life in LA.
 
 忽然联想到我爸爸在高中的年纪经历了爷爷的去世，虽然平时总是和爸爸拌嘴，但自己真的很幸运能有如此爱我的父母一直陪伴着我。
 
-##### 10/21/2020 20:52
+###### 10/21/2020 20:52
 
 收到邮件说第一个学期的一门P/NP课程还是incomplete的状态，要尽快解决。当时要求rotation和三个教授谈话写报告，自己只完成一个就再也没当回事。有很长时间处在这种即便该做的事情没有完成也不是很上心的状态，感觉事不关己，咋样都可以...听起来就很欠打，完全无药可救...估计旁观的话会觉得这个人为什么会有这么多奇葩的行为，脑子是不是有问题...
 
 看到邮件的第一反应是，要是被劝退了岂不是就可以回国了，反而有一种松了一口气的感觉...就像是觉得未来肯定会有更多的折磨，现在就结束反而很释然...这么看自己肯定是坏掉了...
+
+###### 11/8/2020 16:03
+
+心态持续爆炸的日子...
