--- a/_posts/2020-10-04-Diary.markdown
+++ b/_posts/2020-10-04-Diary.markdown
@@ -10,37 +10,37 @@ author: ykx
 description: Sometimes I feel emotionally overwhelmed, and I do not want to share the bad experience with others. So I write those feelings here, making myself feel better.
 ---
 
-###### 对自己说的话
+#### 对自己说的话
 
 宅家的日子里有太多坏情绪了，不开心的时候总是想找个人说。然而自己是一个缺乏社交又不擅长情绪表达的人，每次把负面情绪带给亲人朋友之后还会很有负罪感，所以想在这本坏情绪日记里把所有的不开心说出来。写下坏情绪的彼时彼刻的自己，也许会觉得整个人生都灰暗了，但希望正准备写下更多坏情绪的此时此刻的自己能够发现，在那么多“天塌了”的日子之后，当下的自己仍然在好好的活着，所以其实没什么大不了的，对吧。
 
 写日记的时候会发现，自己是个不努力的人，是个爱抱怨的人。虽然很差劲，但也希望能接纳这样的自己，别被拖累在无止境的自我谴责中。要对自己负责，因为也只有你能对自己负责，差劲的自己要更有干劲地让自己变好。睁开双眼，轻松且愉快地面对新的一天，这才是你想要的生活呀。
 
-###### 10/04/2020 14:48
+#### 10/04/2020 14:48
 
 最近越来越颓废了，糟糕的日子真的是没有底线的...每天醒来都很down，没有能分享的人，也不想四处传播不好的情绪...和自己内耗太消耗精力了，要花好多好多时间在无意义的事情上，让自己能短暂地快乐一下...完全失控的感觉，最可怕的是不相信能靠自己变好起来，已经让自己失望太多太多太多次了...
 
-###### 10/17/2020 16:26
+#### 10/17/2020 16:26
 
 同组的印度师兄家里的亲人连续出了状况，先是一位很亲的叔叔去世了，现在是母亲身体状况很差。COVID-19的影响一直持续着，相比之下国内的情况让人安心很多。看到“I feel very helpless”时感觉特别能够理解那种心情但又不足以体会到其中的重量，只能说我很幸运不需要去面对同样的问题。
 
-###### 10/19/2020 14:00
+#### 10/19/2020 14:00
 
 刚刚印度师兄打电话过来说"My mother is no more"...除了说"Sorry for hearing that. Take care of yourself"完全不知道该如何安慰...感觉很震惊，生活真的很残酷...
 
 忽然联想到我爸爸在高中的年纪经历了爷爷的去世，虽然平时总是和爸爸拌嘴，但自己真的很幸运能有如此爱我的父母一直陪伴着我。
 
-###### 10/21/2020 20:52
+#### 10/21/2020 20:52
 
 收到邮件说第一个学期的一门P/NP课程还是incomplete的状态，要尽快解决。当时要求rotation和三个教授谈话写报告，自己只完成一个就再也没当回事。有很长时间处在这种即便该做的事情没有完成也不是很上心的状态，感觉事不关己，咋样都可以...听起来就很欠打，完全无药可救...估计旁观的话会觉得这个人为什么会有这么多奇葩的行为，脑子是不是有问题...
 
 看到邮件的第一反应是，要是被劝退了岂不是就可以回国了，反而有一种松了一口气的感觉...就像是觉得未来肯定会有更多的折磨，现在就结束反而很释然...这么看自己肯定是坏掉了...
 
-###### 11/8/2020 16:03
+#### 11/8/2020 16:03
 
 心态持续爆炸的日子...
 
 
-###### 02/26/2021 18:50
+#### 02/26/2021 18:50
 
 昨天的随机过程考试爆炸了...没有好好复习，但凡每周跟上进度看一看课本都不至于这样...去年的惨痛经历后在心里骂了自己无数遍，现在还是无所谓的样子...啊啊啊没救了你...
