--- a/_posts/2020-10-04-Diary.markdown
+++ b/_posts/2020-10-04-Diary.markdown
@@ -44,3 +44,5 @@ description: Sometimes I feel emotionally overwhelmed, and I do not want to shar
 #### 02/26/2021 18:50
 
 昨天的随机过程考试爆炸了...没有好好复习，但凡每周跟上进度看一看课本都不至于这样...去年的惨痛经历后在心里骂了自己无数遍，现在还是无所谓的样子...啊啊啊没救了你...
+
+刚刚算了笔账，租房子租到资金链断裂...感谢Z同学的无利息贷款，在这里记上，下个月和下下个月发工资的时候一定要还上！（救命之恩无以为报，日后上刀山下火海一句话(ง •̀_•́)ง ）)
