--- a/_posts/2020-10-04-Diary.markdown
+++ b/_posts/2020-10-04-Diary.markdown
@@ -1,5 +1,5 @@
 ---
-title: "Bad Day Diary"
+title: "Diary"
 layout: post
 date: 2020-10-04 15:00
 img: mess.jpg
@@ -7,7 +7,7 @@ headerImage: True
 tag: [Diary]
 category: blog
 author: ykx
-description: Sometimes I feel emotionally overwhelmed, and I do not want to share the bad experience with others. So I write those feelings here, making myself feel better.
+description: Sometimes I feel emotionally overwhelmed, and I do not want to share the bad experience with others. So I write those feelings here, to make myself feel better.
 ---
 
 #### 对自己说的话
@@ -49,3 +49,17 @@ description: Sometimes I feel emotionally overwhelmed, and I do not want to shar
 #### 03/24/2021 21:30
 
 卡在自我拯救->拯救失败->否定自己->浪费生命->自我拯救的死循环中...
+
+#### 05/30/2021 00:50
+
+一个漫长的学期终于过去了呀。
+
+第二次考screening exam还是很幸运地通过了，虽然只有2个top和3个moderate，但...通过万岁！终于不用考虑太多课程上的事情了。学期中途感觉压力太大退掉了cryptography，本来对剩下的stochastic process也没有抱太多期望，直到出成绩的时候被成绩单上的A惊到了...毕竟做好了拿B+的心理准备，而且平时成绩60+第一次期中还在平均分以下怎么都想不到还能拿A（写这段话的时候还特意又去确认了一遍...），只能说教授真的太给面子了，感激不尽！
+
+学期中的时候几乎被自己如潮水般的负面情绪吞没了，现在想来可能是，在各种事情都做的不好的时候，就很自然地开始就回忆从小到大各种失败的经历，有意无意地强化着“自己没有办法把一件事情做好”的意识。疫情里独处很多时候很多事情确实只能依靠自己，偏偏这时候又很强烈地否定自己，就...很爆炸。某种程度上而言，也是在为自己不想好好做事找借口。当时的心理活动大概就是——“你看你本科毕设做的一堆烂摊子，说明你不适合读博啦，上一次screening考的那么差，这次还不想好好准备，肯定又是过不了的啦。再考不过也别读了，收拾收拾回家歇个半年也挺好的，之后的事情就再说吧””你看你，心情不好的时候跟爸妈打电话什么话都不想说，搞得最后爸妈还得照顾你的情绪，太逊啦。你呀总是这样，心情不好又不喜欢表达出来，总是摆着个臭脸然后冷暴力，太不成熟了，不是个好儿子，也不是个好朋友好恋人。你自己想想看，有多少次就因为你自己太任性了让朋友和曾经的恋人伤心“——这样子。
+
+所以特别感激C和F那个时候的关心，感觉就像是，脑袋里逐渐形成的一些深信不疑的念头，啪地一下被拍碎了，然后被告知说，自己脑袋瓜里的都是胡思乱想，我也没有想象中的那么糟糕哈。别一个人自顾自地走着，明明可以信赖和依靠的人都在这儿。之前感觉自己卡在一个情绪的死循环里，这个时候真的是如释重负，可以继续向前走了。哎呀自己真的太不擅长表达了，即使想要把这些心情跟你们分享，也不知道该怎么说才好，毕竟想来想去都是自己在和自己纠结，还是有点可笑。希望如果某一天你们看到这儿的时候，能知道发生的这些事情对我而言都超级超级重要。
+
+最近被好多人评价太安静了，这种自我纠结加上不擅长表达的性格某些时候还是挺烦人的，但好像已经被刻到骨子里了，咋样都改不过来，也是挺没救的。不过感觉日子终究还是好起来了，bad day大概也到头了。
+
+另一件略微有些伤感的事情是，外公外婆要搬家了，等下次回国的时候，估计程墩路的外婆家就只是过去式了。太多太多的故事发生在那里，有好多快乐的回忆啊。上一次去还是去年的1月，现在看就是最后一次了，然而并不记得当时发生了什么，大概像往常一样和外公外婆吃了顿午饭聊了一下午的天吧，还挺想再去一次的，可恶。这种完全不知道就是最后一次的分别还是挺折磨人的。
