--- a/_posts/2021-08-09-Coffee.markdown
+++ b/_posts/2021-08-09-Coffee.markdown
@@ -14,7 +14,7 @@ description: Comments on all kinds of coffee I have ever tried.
 
 The coffee can be basically categorized into three types according to the roast: light, medium and dark. Generally speaking, light roast coffee is more sour than dark roast coffee, while the latter one is more bitter.
 
-Starbucks Veranda Blend is Blonde roasted (light roasted) Arabica coffee. It tastes acidic, not bitter, not sweet for me.
+Starbucks Veranda Blend is a Blonde roasted (light roasted) Arabica coffee. It tastes acidic, not bitter, not sweet for me. Adding milk is one way to reduce the acidity.
 
 ---
 
